<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.classrecorder.teacherserver</groupId>
	<artifactId>classrecorder</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>ClassRecorder</name>
	<description>Service to record and upload automatically classes to youtube</description>
	
	<repositories>
	    <repository>
	      <id>google-api-services</id>
	      <url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
	    </repository>
  	</repositories>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.6.RELEASE</version>
		<relativePath/>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.youtube.version>v3-rev8-1.12.0-beta</project.youtube.version>
   		<project.http.version>1.12.0-beta</project.http.version>
    	<project.oauth.version>1.12.0-beta</project.oauth.version>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			</dependency>
		<!-- YouTube Data V3 support -->
	    <dependency>
	      <groupId>com.google.apis</groupId>
	      <artifactId>google-api-services-youtube</artifactId>
	      <version>${project.youtube.version}</version>
	    </dependency>
	    <dependency>
	      <groupId>com.google.http-client</groupId>
	      <artifactId>google-http-client-jackson2</artifactId>
	      <version>${project.http.version}</version>
	    </dependency>
	    <dependency>
	      <groupId>com.google.oauth-client</groupId>
	      <artifactId>google-oauth-client-jetty</artifactId>
	      <version>${project.oauth.version}</version>
	    </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>


</project>
